k8s/angular-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: angular-app 
  namespace: example-namespaces
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : angular-app
    spec:
      containers:
        - name: angular-app-container
          image: inyee/angular-app:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
