k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-app
  name: angular-service
  namespace: example-namespaces
spec:
  type: NodePort
  ports:
  - name: angular-app
    port: 80
    protocol: TCP
  selector:
    app: angular-app
